# boringpigeon

./: .replit  app.py  convert_icons.py  icon_generator.py  main.py  openai_service.py  package-lock.json  package.json  pyproject.toml  replit.nix
instance/: virtualpet.db
logs/: virtual_pet.log.1  virtual_pet.log.10  virtual_pet.log.2  virtual_pet.log.3  virtual_pet.log.4  virtual_pet.log.5  virtual_pet.log.6  virtual_pet.log.7  virtual_pet.log.8  virtual_pet.log.9
static/: manifest.json
static/css/: style.css
static/js/: accessoryManager.js  animations.js  disclaimer.js  donation.js  game.js  openai_service.py  pet.js  reactions.js  sounds.js  sw.js  transactionHistory.js  transactionMonitor.js
templates/: index.html
